<resources>
    <string name="app_name">ProjectDex</string>
    <!--  Login  -->
    <string name="fragment_signin_txtLEmail">Email</string>
    <string name="fragment_signin_txtLPassword">Password</string>
    <string name="fragment_signin_btnLogin">Log in</string>
    <string name="fragment_signin_lblForgotPassword">Forgot passsword?</string>
    <string name="fragment_signin_lblNotRegistered">Don\'t have an account? Sign up</string>
    <string name="fragment_signup_btnLogin">Sign Up</string>
    <string name="fragment_signup_txtEmail">Email</string>
    <string name="fragment_signup_txtLPassword">Password</string>
    <string name="fragment_signup_ReturnSignIn">Have an account? Log in</string>
    <string name="error_invalid_email">The email must be a valid email address.</string>
    <string name="error_weak_password">Password should be at least 6 characters</string>
    <string name="error_blankspace_password">Your password can\'t start or end with a blank space</string>
    <string name="error_character_password">Only use letters, numbers and common punctuation characters</string>
    <!--  Data Detail  -->
    <string name="data_pokemon_detail_lblHeight">Height: %s m</string>
    <string name="data_pokemon_detail_lblWeight">Weight: %s kg</string>
    <string name="data_pokemon_detail_lblSpecies">Species</string>
    <string name="data_pokemon_detail_lblAbilities">Abilities</string>
    <string name="data_pokemon_detail_lblAbilities_Separator">or</string>
    <string name="data_pokemon_detail_lblBaseStats">Base Stats</string>
    <string name="data_pokemon_detail_lblHP">HP</string>
    <string name="data_pokemon_detail_lblAttack">Attack</string>
    <string name="data_pokemon_detail_lblDefense">Defense</string>
    <string name="data_pokemon_detail_lblSpAttack">Sp.Attack</string>
    <string name="data_pokemon_detail_lblSpDefense">Sp.Defense</string>
    <string name="data_pokemon_detail_lblSpeed">Speed</string>
    <string name="data_pokemon_detail_lblTotalStats">Total</string>
    <string name="data_pokemon_detail_lblEvolutionChain">Evolution Chain</string>
    <string name="data_pokemon_detail_lblHidden">Hidden</string>
<!--    -->
    <string name="id_pokemon">#%03d</string>
    <string name="pokemonEvoName">%d - %s</string>
    <string name="evolution_by_level">Level %d %s</string>
    <string name="evolution_by_trade_with_heldItem">trade equipped with %s</string>
    <string name="evolution_by_level_with_heldItem">level %s equipped with %s</string>
    <string name="evolution_by_beauty">High beauty + Level</string>
    <string name="evolution_by_knowMove">Know %s + Level</string>
    <string name="evolution_by_partySpecie">Level + %s in the party</string>
    <string name="evolution_by_partyType">Level %d + %s Pokémon in the party</string>
    <string name="evolution_by_turn_upside_down">Level %d + turn upside-down</string>
    <string name="evolution_by_Affection">%sLevel + %d of affection</string>
    <string name="fragment_list_pokemon">Search</string>
    <string name="fragment_list_pokemon_mnuSearch_hint">Enter name</string>
    <string name="fragment_team_creator_txtLTeamName">Team Name</string>
    <string name="fragment_team_creator_lblPokeParty">Pokemon Party</string>
    <string name="fragment_team_creator_mnuSave">Save</string>
    <string name="fragment_teams_list_empty_text">You didn\'t create any teams yet</string>
    <string name="fragment_team_creator_mnuDelete">Delete</string>
    <string name="logout_title">Logout</string>
    <string name="listTeamsFragment_title">Team Builder</string>
    <string name="listPokemonFragment_title">Pokédex</string>
    <string name="activity_main_navHeader_lblUserName">Welcome, %s</string>
    <string name="default_user_name">Trainer</string>
    <string name="default_team_name">Team Name</string>
    <string name="fragment_signup_txtLUserName">Name</string>
    <string name="error_invalid_username">Name cannot be empty</string>
</resources>
