<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/DDetailLL"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/NScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ClScroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                >

                <TextView
                    android:id="@+id/lblSpecies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/data_pokemon_detail_lblSpecies"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/lblDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lblSpecies" />

                <TextView
                    android:id="@+id/lblHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lblDescription" />

                <TextView
                    android:id="@+id/lblWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/lblHeight"
                    app:layout_constraintTop_toBottomOf="@id/lblDescription"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/lblAbilities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_pokemon_detail_lblAbilities"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lblWeight" />
                <TextView
                    android:id="@+id/lblAbilitie1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/lblAbilities"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <TextView
                    android:id="@+id/lblAbilitiesSeparator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/lblAbilities"
                    app:layout_constraintStart_toEndOf="@id/lblAbilitie1"
                    app:layout_constraintEnd_toStartOf="@id/lblAbilitie2"
                    android:text="@string/data_pokemon_detail_lblAbilities_Separator"
                    />
                <TextView
                    android:id="@+id/lblAbilitie2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/lblAbilities"
                    app:layout_constraintStart_toEndOf="@id/lblAbilitiesSeparator"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <TextView
                    android:id="@+id/lblBaseStats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/lblAbilitie1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/data_pokemon_detail_lblBaseStats"
                    />
                <TextView
                    android:id="@+id/lblHP"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/lblBaseStats"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/data_pokemon_detail_lblHP"
                    />
                <TextView
                    android:id="@+id/lblHPData"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textStyle="bold"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/lblBaseStats"
                    app:layout_constraintStart_toEndOf="@+id/lblHP"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="55"
                    />
                <TextView
                    android:id="@+id/lblAttack"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/lblHP"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/data_pokemon_detail_lblAttack"
                    />
                <TextView
                    android:id="@+id/lblAttackData"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textStyle="bold"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/lblHP"
                    app:layout_constraintStart_toEndOf="@+id/lblAttack"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="55"
                    />
                <TextView
                    android:id="@+id/lblDefense"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/lblAttack"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/data_pokemon_detail_lblDefense"
                    />
                <TextView
                    android:id="@+id/lblDefenseData"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textStyle="bold"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/lblAttack"
                    app:layout_constraintStart_toEndOf="@+id/lblDefense"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="50"
                    />
                <TextView
                    android:id="@+id/lblSpAttack"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/lblDefense"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/data_pokemon_detail_lblSpAttack"
                    />
                <TextView
                    android:id="@+id/lblSpAttackData"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textStyle="bold"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/lblDefense"
                    app:layout_constraintStart_toEndOf="@+id/lblSpAttack"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="45"
                    />
                <TextView
                    android:id="@+id/lblSpDefense"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/lblSpAttack"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/data_pokemon_detail_lblSpDefense"
                    />
                <TextView
                    android:id="@+id/lblSpDefenseData"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textStyle="bold"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/lblSpAttack"
                    app:layout_constraintStart_toEndOf="@+id/lblSpDefense"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="65"
                    />
                <TextView
                    android:id="@+id/lblSpeed"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/lblSpDefense"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/data_pokemon_detail_lblSpeed"
                    />
                <TextView
                    android:id="@+id/lblSpeedData"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textStyle="bold"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/lblSpDefense"
                    app:layout_constraintStart_toEndOf="@+id/lblSpeed"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="55"
                    />

                <TextView
                    android:id="@+id/lblTotalStats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/data_pokemon_detail_lblTotalStats"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lblSpeed" />

                <TextView
                    android:id="@+id/lblTotalStatsNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/lblTotalStats"
                    app:layout_constraintTop_toBottomOf="@id/lblSpeed"
                    tools:text="325" />
                <TextView
                    android:id="@+id/lblEvolutionChain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/lblTotalStats"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/data_pokemon_detail_lblEvolutionChain"
                    />
                <TextView
                    android:id="@+id/lblEvolution1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/lblEvolutionChain"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <TextView
                    android:id="@+id/lblEvolution2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/lblEvolutionChain"
                    app:layout_constraintStart_toEndOf="@id/lblEvolution1"
                    app:layout_constraintEnd_toStartOf="@id/lblEvolution3"
                    />
                <TextView
                    android:id="@+id/lblEvolution3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/lblEvolutionChain"
                    app:layout_constraintEnd_toEndOf="parent"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>